fix overlapping hover button on smaller devices

--- a/css/style.css
+++ b/css/style.css
@@ -361,6 +361,13 @@ figure figcaption {
 	margin: 0 auto;
 }
 
+@media screen and (max-width: 768px) {
+	.container-wrap {
+		max-width: 100%;
+		margin: 0;
+	}
+}
+
 #colorlib-main {
 	width: calc(100% - 300px);
 	float: right;
@@ -370,8 +377,22 @@ figure figcaption {
 }
 @media screen and (max-width: 768px) {
 	#colorlib-main {
-		width: 100%;
-		padding: 0 1em;
+		width: 100% !important;
+		float: none !important;
+		padding: 70px 1em 1em 1em; /* space for nav button + normal padding */
+	}
+	
+	#colorlib-aside {
+		position: fixed;
+		left: 0;
+		top: 0;
+		height: 100%;
+		transform: translateX(-300px);
+		z-index: 1001;
+	}
+	
+	body.offcanvas #colorlib-main {
+		transform: none !important;
 	}
 }
 
@@ -1943,16 +1964,15 @@ body.offcanvas .colorlib-nav-toggle {
 
 .colorlib-nav-toggle {
 	position: fixed;
-	left: -5px;
-	top: 0px;
+	right: 15px;
+	top: 15px;
 	z-index: 9999;
 	cursor: pointer;
 	opacity: 1;
 	visibility: hidden;
 	padding: 20px;
-	-webkit-transition: 0.5s;
-	-o-transition: 0.5s;
-	transition: 0.5s;
+	background-color: #f9bf3f; /* Optional: better contrast */
+	border-radius: 8px; /* Optional: styling */
 }
 @media screen and (max-width: 768px) {
 	.colorlib-nav-toggle {
